# python-uv-template

./: .editorconfig  .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: cli.py  main.py
tests/: conftest.py  test_main.py
