[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-uv-template"
version = "0.1.0"
description = "A modern Python template using uv with Ruff and Pytest"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Evr5", email = "ethanvr3@gmail.com" }]
keywords = []
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
check_untyped_defs = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[project.scripts]
uv-init = "python_uv_template.cli:main"
